--- a/WorkingasDesigned/app/src/main/res/values/strings.xml
+++ b/WorkingasDesigned/app/src/main/res/values/strings.xml
@@ -1,4 +1,13 @@
 <resources>
     <string name="app_name">Working as Designed</string>
     <string name="title_activity_map">Map</string>
+    <string name="drawer_open">Open</string>
+    <string name="drawer_close">Close</string>
+    <string-array
+        name="drawer_options">
+        <item>Road Work</item>
+        <item>Water</item>
+        <item>Fiber</item>
+        <item>Trees</item>
+    </string-array>
 </resources>
