--- a/WorkingasDesigned/app/src/main/res/values/strings.xml
+++ b/WorkingasDesigned/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
         <item>Resurfacing</item>
         <item>Sidewalk</item>
         <item>Residential</item>
+        <item>Pending Permitss</item>
     </string-array>
 
     <!-- TODO: Remove or change this placeholder text -->
