--- a/WorkingasDesigned/app/src/main/res/values/strings.xml
+++ b/WorkingasDesigned/app/src/main/res/values/strings.xml
@@ -16,9 +16,6 @@
         <item>Resurfacing</item>
         <item>Sidewalk</item>
         <item>Residential</item>
-        <item>Pending Permitss</item>
+        <item>Pending Permits</item>
     </string-array>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
